--- a/PostgresSample/appsettings.json
+++ b/PostgresSample/appsettings.json
@@ -1,7 +1,8 @@
 ﻿{
 	"ConnectionStrings": {
 		"WebApiDatabase": "Host=localhost; Database=dotnet-6-crud-api; Username=postgres; Password=mysecretpassword",
-		"RedisConn": "localhost:6379"
+		"RedisConn": "localhost:6379",
+		"SqlConnection": "Data Source=.\\SQLEXPRESS;Initial Catalog=Test;user id=sa;password=123;TrustServerCertificate=True;Connection Timeout=6000"
 	},
 	"Logging": {
 		"LogLevel": {
