--- a/PostgresSample/appsettings.json
+++ b/PostgresSample/appsettings.json
@@ -2,7 +2,7 @@
 	"ConnectionStrings": {
 		"WebApiDatabase": "Host=localhost; Database=dotnet-6-crud-api; Username=postgres; Password=mysecretpassword",
 		"RedisConn": "localhost:6379",
-		"SqlConnection": "Data Source=.\\SQLEXPRESS;Initial Catalog=Test;user id=sa;password=123;TrustServerCertificate=True;Connection Timeout=6000"
+		"SqlConnection": "Data Source=.;Initial Catalog=Test;user id=sa;password=123;TrustServerCertificate=True;Connection Timeout=6000"
 	},
 	"Logging": {
 		"LogLevel": {
